"Image not showing issue fixed"

--- a/style.css
+++ b/style.css
@@ -60,17 +60,17 @@ button{
  }
 
 .j{
-    background-image: url('./crash.png');
+    background-image: url('./img/crash.png');
 
  }
 
 .k{
-    background-image: url('./snare.png');
+    background-image: url('./img/snare.png');
 
  }
 
 .l{
-    background-image: url('./kick.png');
+    background-image: url('./img/kick.png');
     
  }
 
